20160602 CHANGELOG.txt created.
20160602 ./api/README.txt added.
20160602 ./api/api-dump.sh added.